@@ -40,11 +40,11 @@ public class PatternError {
         StringBuilder builder = new StringBuilder();
         for (List<ItemStack> candidate : candidates) {
             if (!candidate.isEmpty()) {
-                builder.append(candidate.get(0).getDisplayName().getString());
-                builder.append(", ");
+                if (!builder.isEmpty()) builder.append(", ");
+                builder.append(candidate.getFirst().getDisplayName());
+                if (candidate.size() > 1) builder.append("...");
             }
         }
-        builder.append("...");
         return Component.translatable("gtceu.multiblock.pattern.error", builder.toString(), pos.toShortString());
     }
 }
